--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "license": "0BSD",
-  "main": "index.js",
+  "name": "mood-diary-app",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -8,12 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.31",
-    "expo-status-bar": "~3.0.9",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-paper": "4.9.2",
-    "@expo/vector-icons": "^15.0.3"
+    "expo": "~49.0.0",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-web": "~0.19.6"
   },
   "private": true
 }
